refactor: Update project name to include version
Update the `name` field in `package.json` and `metadata.json` to accurately reflect the project's name and version (1.0). This ensures consistency and proper identification of the application.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-multiplan---gestão-financeira-profissional",
+  "name": "multiplan---gestão-financeira-profissional-1.0",
   "private": true,
   "version": "0.0.0",
   "type": "module",
